--- a/templates/generators/app/routes/resources.go.tmpl
+++ b/templates/generators/app/routes/resources.go.tmpl
@@ -2,7 +2,7 @@ package routes
 
 import (
     . "github.com/cliohq/clio/core"
-    "../../app/controllers"
+    "{{.AppName}}/app/controllers"
 )
 
 // func {{.SingularTitle}}Routes () {
