--- a/templates/generators/app/routes/resources.go.tmpl
+++ b/templates/generators/app/routes/resources.go.tmpl
@@ -1,7 +1,7 @@
 package routes
 
 import (
-    . "github.com/cliohq/clio/core"
+    . "github.com/grsmv/clio/core"
     "{{.AppName}}/app/controllers"
 )
 
